Create Dockerfile for backend

--- a/example-frontend/Dockerfile
+++ b/example-frontend/Dockerfile
@@ -41,11 +41,9 @@ USER node
 # Copy package.json so that package manager commands can be used.
 COPY package.json .
 
-# Copy the production dependencies from the deps stage and also
-# the built application from the build stage into the image.
-# COPY --from=build /usr/src/app/node_modules ./node_modules
+# Copy the built application from the build stage into the image.
 COPY --from=build /usr/src/app/build ./build
- 
+
 # Expose the port that the application listens on.
 EXPOSE 5000
 
