--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   proxy:
     image: nginx:1.25.4-alpine3.18
     volumes:
-      - /home/vv173/Development/material/proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 80:80
     networks:
